# facial_expression_detector

./: .gitignore  README.md  config.py  csvfile.py  main.py  model.py  pyproject.toml  requirements.txt  train.py  validation.py
data/uni_validation_set/: classification_scores.csv
fed/: config.py  main.py  model.py  plots.py  train.py  validation.py
imagecsv/: classification_scores.csv
scripts/: format.sh
