[project]
name = "facial_expression_detector"
description = "Detect facial expressions in images and videos."
authors = [
    { name = "Victoria Filipovic", email = "victoria.filipovic@campus.lmu.de" },
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/v1ctoria02/facial_expression_detector"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=58", "setuptools_scm>=6.2", "wheel"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY",    # Copyright
    "INP001", # __init__.py missing
    "PL",     # pylint
    "PTH",    # Allow os.path instead of Pathlib
    "ANN401", # Allow Any
    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    # Compatibility issues
    "COM812",
    "ISC001",
    "D203",
    "D212",
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
